--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=weather-api
 
 server.port=8080
 
-weatherApiKey = 
+weatherApiKey = <YOUR_KEY>
 weatherApiURL = http://api.weatherapi.com/v1
