--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8080
 
 weatherApiKey = <YOUR_KEY>
 weatherApiURL = http://api.weatherapi.com/v1
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-index.html
